fix scrolling banner overflow bug

--- a/css/main.css
+++ b/css/main.css
@@ -78,6 +78,7 @@ h2.groovy {
   background-clip: content-box;
   width: 75%;
   margin: 0 auto;
+  overflow: hidden;
 }
 
 h3 {
